@@ -362,6 +362,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 472) Syndication feeds for the last few edits of page history
 * Format edit comments in Recent Changes feed
 * Switch incorrectly ordered column headers on Recent Changes feed diffs
+* (bug 6117) Use message for history feed description, add German localization
 
 
 == Compatibility ==
